# feedback

./: .gitignore  Cargo.toml  Makefile  README.md  go.mod  go.sum  log.json
cmd/feedback/: main.go
internal/bot/: bot.go
internal/bot/telegrambot/: telegrambot.go  testing.go
internal/config/: config.go
internal/constants/: http.go  response.go
internal/feedback/: feedback.go
internal/handlers/: handlers.go
internal/logging/: logging.go
internal/logging/zap/: zap.go
internal/server/: handlersBot.go  server.go
internal/utils/file/: filre.go
internal/validate/: validate.go
internal/validate/validator/: validator.go
src/: error.rs  handlers.rs  main.rs  routing.rs  state.rs  telegram.rs  utility.rs
test/bot/telegrambot/: telegrambot_test.go
