[package]
name = "feedback"
version = "0.1.0"
authors = ["rchudin <rus.chudin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
validator = { version = "0.12", features = ["derive", "phone"] }
reqwest = { version = "0.10", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "0.2", features = ["full"] }
serde_json = "1.0"
futures = "0.3"
bytes = "0.5"
clap = "2.33"
warp = "0.2"
